# iQuant.Portal

./: .env.example  .gitignore  Dockerfile  README.md  celery_worker.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  start_async.sh  start_monitoring.bat  start_monitoring.sh  start_web.sh
.github/workflows/: deploy.yml  test.yml
config/: .env.example  __init__.py  prometheus.yml  settings.py
core/: __init__.py  agents.py  auth.py  backtest_engine.py  cache.py  data_fetcher.py  data_generator.py  data_sync.py  database.py  database_router.py  db_performance.py  ledger_service.py  metrics.py  rate_limiter.py  risk_engine.py  secrets.py  stock_selector.py  strategy_manager.py  task_queue.py  tasks.py  trading_executor.py  visualization.py
db/: optimization_config.sql
docs/: README.md  quick-start-dev.md  system-architecture.md  system-design.md  system-functions.md
examples/: cache_demo.py
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
reports/: pig_price_wens_analysis_report.md  pig_wens_analysis.py  pig_wens_chart_data.json  pig_wens_comparison.csv  pig_wens_comparison_chart.html
scripts/: run_migrations.py  sync_data.py  verify_cache.py
strategies/: __init__.py  registry.py
tests/: conftest.py  test_api_async.py  test_backtest.py  test_backtest_engine.py  test_cache.py  test_data_fetcher.py  test_integration.py  test_security.py  test_strategies.py  test_tasks.py
web/: __init__.py  app.py  app_async.py  namespaces.py  routes_auth.py  routes_ledger.py
(+63 files in other folders)
